--- a/schutzbot/Jenkinsfile
+++ b/schutzbot/Jenkinsfile
@@ -9,24 +9,33 @@ pipeline {
     stages {
 
         stage("PSI Images") {
+            // Set the agent here in this stage so run all of the builds in
+            // the same agent.
             agent { label "fedora3 || fedora32" }
+
             stage("Install packer") {
                 steps {
                     sh "schutzbot/packer_install.sh"
                 }
             }
-            stage("Build images")
+
+            stage("Build images") {
+
+                // Build the images in parallel.
                 parallel {
+
                     stage("Fedora 31") {
                         steps {
                             sh "packer build openstack/fedora31.json"
                         }
                     }
+
                     stage("Fedora 32") {
                         steps {
                             sh "packer build openstack/fedora31.json"
                         }
                     }
+
                 }
             }
         }
