Set permissions and cleanup

--- a/schutzbot/Jenkinsfile
+++ b/schutzbot/Jenkinsfile
@@ -38,5 +38,13 @@ pipeline {
 
             }
         }
+
+    post {
+        always {
+            // Always clean up credentials.
+            sh "rm -rf /etc/openstack"
+        }
+    }
+
     }
 }
