--- a/schutzbot/Jenkinsfile
+++ b/schutzbot/Jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             post {
                 always {
                     // Always clean up credentials.
-                    sh "rm -rf /etc/openstack"
+                    sh "sudo rm -rf /etc/openstack"
                 }
             }
         }
