--- a/schutzbot/Jenkinsfile
+++ b/schutzbot/Jenkinsfile
@@ -7,6 +7,11 @@ pipeline {
         ansiColor('xterm')
     }
 
+    triggers {
+        cron 'H 5 * * 1-5'
+    }
+
+
     stages {
 
         stage("PSI Images") {
